<resources>
    <string name="app_name">LINK</string>
    <string name="lint">LINK</string>

    <string name="next">다음</string>
    <string name="add">추가하기</string>

    <!--Start-->
    <string name="subtitle">나의 반려견을 잇다</string>
    <string name="start_with_this_profile">이 프로필로 시작하기</string>
    <string name="login_fail">로그인에 실패했습니다</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="pet_name">반려견 이름</string>
    <string name="type">종류</string>
    <string name="birthday">생일</string>
    <string name="weight">몸무게</string>
    <string name="password_is_not_same">비밀번호가 일치하지 않습니다</string>
    <string name="signIn_fail_check_your_email">회원가입에 실패 했습니다.\n이메일과 비밀번호를 확인해주세요😭</string>
    <string name="logIn_fail_check_your_email">로그인에 실패 했습니다.\n이메일과 비밀번호를 확인해주세요😭</string>

    <string name="pet_age">%d년 %d개월</string>
    <string name="check_input_please">잘못된 입력이 있습니다. 확인해주세요!</string>
    <string name="day_is_error">잘못된 입력입니다 ( yyyy-mm-dd )</string>
    <string name="default_user_name">집사123</string>
    <string name="negative">취소</string>
    <string name="positive">확인</string>
    <string name="please_input_user_name">닉네임 입력해주세요😄</string>
    <string name="user_name">집사 이름</string>
    <string name="skipp">건너뛰기</string>


    <string name="set_profile_message">집사님!</string>
    <string name="set_profile_sub_message">프로필을 변경해 볼래요?</string>

    <!--Education-->
    <string name="with_link">링크와</string>
    <string name="education_first_message">와 함께 간단한</string>
    <string name="education_first_sub_message">태깅으로 일상을 기록해 보아요</string>
    <string name="education_second_message">하고싶은 말을 메모에\n남겨놓아요</string>
    <string name="education_third_message">반려동물과 함께 갈 수\n있는 공간 찾아보아요</string>
    <string name="start">시작하기</string>



    <!-- home -->
    <string name="last_meal_temp">50분전에 밥 먹었어요!</string>
    <string name="memo">메모</string>
    <string name="meal">밥</string>
    <string name="snack">간식</string>
    <string name="medicine">약</string>
    <string name="walk">산책</string>
    <string name="shower">목욕</string>
    <string name="pet_record_title">%s의 기록</string>

    <!--tab detail menu-->
    <string name="category_all">전체</string>
    <string name="category_meal">섭식</string>
    <string name="category_walk">산책</string>
    <string name="category_sleep">수면</string>


    <!-- detail-->
    <string name="today">오늘</string>
    <string name="week">주</string>
    <string name="month">월</string>
    <string name="year">년</string>
    <string name="eating">섭식</string>
    <string name="eating_count">식사 횟수</string>
    <string name="eating_amount">식사 양</string>
    <string name="count">횟수</string>
    <string name="walk_time">활동시간</string>

    <string name="sleep">수면</string>
    <string name="average_heart_count">평균 심박수</string>
    <string name="sleep_score">수면 점수</string>
    <string name="snack_count">간식 횟수</string>
    <string name="snack_amount">간식 양</string>
    <string name="eat_type">식사 종류</string>
    <string name="step">걸음</string>
    <string name="gps">GPS</string>
    <string name="analysis">분석</string>
    <string name="length">거리</string>
    <string name="activity_time">활동시간</string>
    <string name="walk_count">걸음 수</string>
    <string name="record">기록</string>
    <string name="quality_of_sleep">수면의 질</string>
    <string name="light_sleep">얕은 수면</string>
    <string name="deep_sleep">깊은 수면</string>
    <string name="percent">%</string>
    <string name="time">시간</string>

    <string name="year_before">%d년 %d달 %일전</string>
    <string name="month_before">%d달 %일전</string>
    <string name="day_before">%d일전</string>

    <string name="hour_before">%d시간전</string>
    <string name="minutes_before">%d분전</string>

    <string name="record_data_sub">의 데이터를</string>
    <string name="are_you_record">기록하시겠습니까?</string>
    <string name="please_record_eat">식사를 기록해주세요!</string>
    <string name="eating_amount_gram">식사 양(g)</string>
    <string name="please_record_walk">산책을 기록해주세요!</string>
    <string name="activity_time_minutes">활동시간(분)</string>
    <string name="length_km">거리(km)</string>
    <string name="default_time">00:00:00</string>
    <string name="please_check_storage_permission"><![CDATA[[애플리케이션 정보 > 권한]에서 [저장소] 권한을 허용하고 다시 해보세요]]></string>
    <string name="detail_setting">상세 설정</string>
    <string name="cancel">취소</string>

    <string name="count_with_int">%d회</string>
    <string name="amount_with_int">%dg</string>
    <string name="km_with_double">%.1fkm</string>
    <string name="hour_and_minutes_with_double">%dh %dm</string>
    <string name="minutes_with_double">%dm</string>
    <string name="percent_with_double">%.0f%% 완료</string>
    <string name="step_count_goal_10000">걸음 수 목표 : 10000</string>
    <string name="set_nfc_data">Nfc 에 펫 정보를 저장하시겠어요?</string>
    <string name="get_heart_bit">심장 박동수를 가져오기</string>
    <string name="bpm">bpm</string>
    <string name="check_heart_bit">심장박동 측정중</string>

</resources>