<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stateView"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/dot1"
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/dot_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dot2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/dot2"
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/dot_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dot3"
            app:layout_constraintStart_toEndOf="@id/dot1"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dot3"
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:background="@drawable/dot_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@id/dot2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/skippTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/skipp"
        android:textColor="@color/gray_e0"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/stateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/stateView" />


    <TextView
        android:id="@+id/patNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/with_link"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stateView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/education_first_message"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/patNameTextView"
        app:layout_constraintTop_toTopOf="@id/patNameTextView" />


    <TextView
        android:id="@+id/subMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/education_first_sub_message"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/patNameTextView"
        app:layout_constraintTop_toBottomOf="@id/patNameTextView" />

    <View
        android:id="@+id/centerDot"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:background="@drawable/dot_green"
        android:src="@drawable/education_first"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subMessageTextView" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/education_first"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subMessageTextView" />


    <TextView
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>